kubernetes/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: ssl-vol
          secret:
            secretName: keycloak-tls
            items:
              - key: tls.key
                path: key.pem
              - key: tls.crt
                path: cert.pem
      containers:
        - name: nobot-keycloak-container
          image: <IMAGE>
          volumeMounts:
            - mountPath: "/ssl"
              name: ssl-vol
              readOnly: true
          ports:
            - containerPort: 8080
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
  type: NodePort
