kubernetes/nobot-art-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nobot-main-api
spec:
  selector:
    matchLabels:
      app: nobot-main-api
  replicas: 1
  template:
    metadata:
      labels:
        app: nobot-main-api
    spec:
      containers:
        - name: nobot-main-api
          image: <IMAGE>
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: nobot-main-api-service
spec:
  selector:
    app: nobot-main-api
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
  type: NodePort
