kubernetes/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-main-host
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.nobot.art
        - api.nobot.art
      secretName: nobot-tls
  rules:
    - host: "auth.nobot.art"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak-service
                port:
                  number: 80
    - host: "api.nobot.art"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nobot-main-api-service
                port:
                  number: 80
